--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       <div class = "square selectable">&nbsp</div>
     </div>
   </div>
+  
+  <div id = "score">
+    <ul>
+      <li id = "player-wins">Player: <span>0</span></li>
+      <li id = "computer-wins">Computer: <span>0</span></li>
+      <li id = "tie-wins">Ties: <span>0</span></li>
+    </ul>
+  </div>
+  
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
 
